--- a/app/assets/stylesheets/components/_slide.scss
+++ b/app/assets/stylesheets/components/_slide.scss
@@ -2,8 +2,8 @@
   text-align: center;
   position: fixed;
   top: 60px;
-  right: 0px;
-  width: 220px;
+  right: 20px;
+  width: 15vw;
   background-color: #2c3c4c;
   padding: 10px;
   border-radius: 10px;
