--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,13 +1,13 @@
 .home-card{
     background-color: #fff;
+    margin-bottom: 20px;
   }
 
 .home-card-header {
-  text-align: left;
+  text-align: center;
   border-bottom-width: 1px;
   padding: 12px;
   border-bottom: 2px solid #FDBB58;
-  text-align: center;
   margin-bottom:22px;
   h4 {
     font-weight:bolder;
@@ -56,4 +56,10 @@
   width: 500px;
   background-color: blue;
   margin-top: 5px;
+}
+
+.step-card-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
