--- a/app/assets/stylesheets/components/_progress.scss
+++ b/app/assets/stylesheets/components/_progress.scss
@@ -10,7 +10,7 @@
 .rectangle {
   background-color: rgb(200, 200, 200) ;
   height: 8px;
-  width: 100px;
+  width: 148px;
 }
 
 .rond {
@@ -20,5 +20,11 @@
   border-radius: 40px;
   text-align: center;
   padding: 8px;
-  box-shadow: 3px 3px 5px grey;
+}
+
+.start-end {
+  background-color: #2F3C4B;
+  width: 15px;
+  height: 15px;
+  text-align: center;
 }
