--- a/app/views/pages/_home-main.html.erb
+++ b/app/views/pages/_home-main.html.erb
@@ -1,138 +1,162 @@
-<div class='page-header'>
-  <h3>Bienvenue <%= current_user.first_name %></h3>
+<!-- ============================= DIV MAIN WIDTH : ne pas TOUCHER SVP -->
+<div class="main-width">
 
-  <h4>Ici, devenez maître de votre levée de fonds.</h4>
-</div>
 
-<div class='home-step-description'>
-  <div class='home-steps-header'>
-    <h3>LES 4 ETAPES D'UN SUPERCLOSING REUSSI</h3>
-  </div>
-  <div class='container-fluid home-steps'>
-    <div class='card step-card'>
-      <div class="step-card-header">
-       Renseignez les infos de votre société
-      </div>
-      <div class='step-card-body'>
-        Ci-dessous, répondez à quelques questions pour créer le profil de votre société.
-      </div>
-    </div>
+  <div class='page-header'>
+    <h3>Bienvenue <%= current_user.first_name %></h3>
 
-    <div class='card step-card'>
-      <div class="step-card-header">
-        Renseignez les infos de l'opération
-      </div>
-      <div class='step-card-body'>
-        Une fois votre profil société, définissez les caractéristiques de la levée de fonds que vous voulez réaliser : montant envisagé et valorisation de votre société.
-      </div>
-    </div>
-
-    <div class='card step-card'>
-      <div class="step-card-header">
-        Invitez vos investisseurs
-      </div>
-      <div class='step-card-body'>
-        En renseignant simplement l'adresse mail de vos investisseurs et le montant de leur investissement, vous leur donnez accès à votre dataroom personnalisée et aux outils de génération automatique de documents et de signature électronique.
-      </div>
-    </div>
-
-    <div class='card step-card'>
-      <div class="step-card-header">
-        Finalisez la levée !
-      </div>
-      <div class='step-card-body'>
-        Quand tous les investisseurs ont confirmé leur participation, vous pouvez procéder au closing : génération automatique des documents et signature électronique.
-      </div>
-    </div>
+    <h4>Ici, devenez maître de votre levée de fonds.</h4>
   </div>
 
-</div>
+  <div class='home-step-description'>
+    <div class='home-steps-header'>
 
+      <div id="home-loop-eclair">
+        <img id="home-eclair" src="/assets/eclair.png" alt="eclair">
+        <h3>LES 4 ETAPES D'UN SUPERCLOSING REUSSI</h3>
+      </div>
+    </div>
+    <div class='container-fluid home-steps'>
+      <div class='card step-card'>
+        <div class="step-card-header">
+          <div style="background-color: #F3BE69; color: black;" class="rond">
+          <p>1</p>
+        </div>
+         Renseignez les infos de votre société
+        </div>
+        <div class='step-card-body'>
+          Ci-dessous, répondez à quelques questions pour créer le profil de votre société.
+        </div>
+      </div>
 
-<div class='container-fluid page-content'>
+      <div class='card step-card'>
+        <div class="step-card-header">
+        <div style="background-color: #F3BE69; color: black;" class="rond">
+          <p>2</p>
+        </div>
+          Renseignez les infos de l'opération
+        </div>
+        <div class='step-card-body'>
+          Une fois votre profil société, définissez les caractéristiques de la levée de fonds que vous voulez réaliser : montant envisagé et valorisation de votre société.
+        </div>
+      </div>
 
-  <div class='row'>
-
-    <div class ='col-xs-12'>
-      <div class='home-card'>
-        <div class = 'home-card-header'>
-          <h3>Vos sociétés</h3>
-         </div>
-
-
-        <div class="home-card-body">
-          <% if current_user.companies.length == 0 %>
-
-            <h5>Vous n'avez encore enregistré aucune société sur SuperClosing.</h5>
-
-            <a href="" class="btn btn-add-company" data-toggle="modal" data-target="#modalCompanyCreation">AJOUTER UNE SOCIETE</a>
-
-          <% else %>
-           <div class='company-container'>
-            <div class='company-container-cards'>
-              <% @distinct_companies.each do |company|%>
-                <div class="company-card">
-                  <%= link_to company_path(company) do %>
-                      <%= image_tag 'ca.png', width: 120, height: 120, class:"product-image" %>
-                  <% end %>
-                  <p><%=  company.name %></p>
-                </div>
-              <% end %>
-                <div class="company-card">
-                <a href="" class="btn btn-add-company" data-toggle="modal" data-target="#modalCompanyCreation">AJOUTER UNE SOCIETE</a>
-              </div>
-            </div>
-
-          </div>
-            <% end %>
+      <div class='card step-card'>
+        <div class="step-card-header">
+        <div style="background-color: #F3BE69; color: black;" class="rond">
+          <p>3</p>
         </div>
 
-       <!--    <div class='company-container'>
-            <div class="company-container-header">
-              Société dans lesquelles vous allez investir
-            </div>
-            <div class='company-container-cards'>
-              <%# if @investisseur.length == 0 %>
-                Aucune pour l'instant
-                <%# else %>
-                  <%# @investisseur.each do |role|%>
-                   <div class="company-card">
-                    <img src="https://via.placeholder.com/120x120" class="product-image hidden-xs">
-                    <%#= link_to "#{role.company.name}", company_path(role.company) %>
+          Invitez vos investisseurs
+        </div>
+        <div class='step-card-body'>
+          En renseignant simplement l'adresse mail de vos investisseurs et le montant de leur investissement, vous leur donnez accès à votre dataroom personnalisée et aux outils de génération automatique de documents et de signature électronique.
+        </div>
+      </div>
+
+      <div class='card step-card'>
+        <div class="step-card-header">
+        <div style="background-color: #F3BE69; color: black;" class="rond">
+          <p>4</p>
+        </div>
+
+          Finalisez la levée !
+        </div>
+        <div class='step-card-body'>
+          Quand tous les investisseurs ont confirmé leur participation, vous pouvez procéder au closing : génération automatique des documents et signature électronique.
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
+  <div class='container-fluid page-content'>
+
+    <div class='row'>
+
+      <div class ='col-xs-12'>
+        <div class='home-card'>
+          <div class = 'home-card-header'>
+            <h3>Vos sociétés</h3>
+           </div>
+
+
+          <div class="home-card-body">
+            <% if current_user.companies.length == 0 %>
+
+              <h5>Vous n'avez encore enregistré aucune société sur SuperClosing.</h5>
+
+              <a href="" class="btn btn-add-company" data-toggle="modal" data-target="#modalCompanyCreation">AJOUTER UNE SOCIETE</a>
+
+            <% else %>
+             <div class='company-container'>
+              <div class='company-container-cards'>
+                <% @distinct_companies.each do |company|%>
+                  <div class="company-card">
+                    <%= link_to company_path(company) do %>
+                        <%= image_tag 'ca.png', width: 120, height: 120, class:"product-image" %>
+                    <% end %>
+                    <p><%=  company.name %></p>
                   </div>
-                <%# end %>
-              <%# end %>
+                <% end %>
+                  <div class="company-card">
+                  <a href="" class="btn btn-add-company" data-toggle="modal" data-target="#modalCompanyCreation">AJOUTER UNE SOCIETE</a>
+                </div>
+              </div>
+
             </div>
-          </div> -->
-
-      </div>
-    </div>
-  </div>
-
-</div>
-
-<div class="modal fade" id="modalCompanyCreation" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header text-center">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <h4 class="modal-title w-100 font-weight-bold"><strong>Ajouter une société</strong></h4>
-      </div>
-      <div class="modal-body mx-3">
-        <p>Entrez votre numéro SIREN (9 chiffres - sans espace)</p>
-          <%= simple_form_for @company, method: :post do |f| %>
-          <%= f.input :siren %>
-          <%= f.input :name, label: 'Nom'%>
-          <%= f.input :address, label: 'Adresse'%>
-          <%= f.input :legal_form, label: 'Forme sociale' %>
-          <%= f.input :creation_date, as: :string, label: "Date d'immatriculation"%>
-          <div class="text-align-center">
-            <%= f.submit 'Créer', class: 'btn btn-form-action' %>
+              <% end %>
           </div>
-        <% end %>
+
+         <!--    <div class='company-container'>
+              <div class="company-container-header">
+                Société dans lesquelles vous allez investir
+              </div>
+              <div class='company-container-cards'>
+                <%# if @investisseur.length == 0 %>
+                  Aucune pour l'instant
+                  <%# else %>
+                    <%# @investisseur.each do |role|%>
+                     <div class="company-card">
+                      <img src="https://via.placeholder.com/120x120" class="product-image hidden-xs">
+                      <%#= link_to "#{role.company.name}", company_path(role.company) %>
+                    </div>
+                  <%# end %>
+                <%# end %>
+              </div>
+            </div> -->
+
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="modal fade" id="modalCompanyCreation" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header text-center">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title w-100 font-weight-bold"><strong>Ajouter une société</strong></h4>
+        </div>
+        <div class="modal-body mx-3">
+          <p>Entrez votre numéro SIREN (9 chiffres - sans espace)</p>
+            <%= simple_form_for @company, method: :post do |f| %>
+            <%= f.input :siren %>
+            <%= f.input :name, label: 'Nom'%>
+            <%= f.input :address, label: 'Adresse'%>
+            <%= f.input :legal_form, label: 'Forme sociale' %>
+            <%= f.input :creation_date, as: :string, label: "Date d'immatriculation"%>
+            <div class="text-align-center">
+              <%= f.submit 'Créer', class: 'btn btn-form-action' %>
+            </div>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
+
 </div>
