traduction de certains trucs

--- a/app/views/investors/index.html.erb
+++ b/app/views/investors/index.html.erb
@@ -17,7 +17,7 @@
             <span># Actions</span>
           </div>
           <div class="investor-list-header-status">
-            <span>Status</span>
+            <span>Statut</span>
           </div>
           <div class="investor-list-header-delete">
           </div>
