--- a/app/views/investors/_show-investors.html.erb
+++ b/app/views/investors/_show-investors.html.erb
@@ -12,7 +12,7 @@
     <span># Actions</span>
   </div>
   <div class="investor-list-header-status">
-    <span>Status</span>
+    <span>Statut</span>
   </div>
   <div class="investor-list-header-delete">
   </div>
