--- a/app/views/pages/_home-investor.html.erb
+++ b/app/views/pages/_home-investor.html.erb
@@ -56,7 +56,7 @@
             </div>
             <div class="operation-list-status">
               <div>
-                <span>Status de votre investissement</span>
+                <span>Statut de votre investissement</span>
               </div>
               <div>
                 <% if invest.status == 'pending' %>
@@ -71,14 +71,14 @@
             <div class="operation-list-status">
               <% if invest.operation.status == 'completed' %>
                 <div>
-                  <span>Status de l'opération</span>
+                  <span>Statut de l'opération</span>
                 </div>
                 <div>
                   <h5><strong>Finalisée</strong></h5>
                 </div>
               <% else %>
                 <div>
-                  <span>Status de l'opération</span>
+                  <span>Statut de l'opération</span>
                 </div>
                 <div>
                   <h5><strong>En cours</strong></h5>
