new front devises

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -50,7 +50,7 @@
   margin-bottom: 30px;
 }
 .step-card {
-  width: 220px;
+  width: 16vw;
   background: #fff;
   box-shadow: 1px 3px 4px 0px #2c3c4c2b;
   .step-card-header{
